# data-atlas

./: .env.example  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/ai/: anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  prompts.py  registry.py
backend/app/api/: deps.py
backend/app/api/v1/: columns.py  impact.py  ingestion.py  lineage.py  router.py  tables.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/domain/schemas/: column.py  governance.py  lineage.py  search.py  table.py
backend/app/ingestion/: base.py  postgresql.py  registry.py
backend/app/lineage/: graph.py  sql_parser.py
backend/app/metadata/: extractor.py  pii_detector.py
backend/app/persistence/: database.py  models.py
backend/app/persistence/repositories/: base.py  column.py  lineage.py  table.py
backend/app/services/: ai_enrichment.py  catalog.py  impact.py  ingestion.py  lineage.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/tests/: test_pii_detector.py  test_sql_parser.py
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/governance/: page.tsx
frontend/src/app/impact/: page.tsx
frontend/src/app/lineage/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/tables/: page.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/ui/: Badge.tsx  (+1 more)
frontend/src/lib/: utils.ts
(+8 files in other folders)
